# ai-mcp

./: README.md  main.py  pyproject.toml
src/agent_orchestration/: __init__.py
src/agent_orchestration/agents/: agents.py  base.py
src/agent_orchestration/bus/: eventbus.py
src/agent_orchestration/mcps/: servers.py
src/agent_orchestration/orchestrator/: aggregator.py  ap2policy.py  graph.py  planner.py
src/agent_orchestration/payments/: x402_client.py
src/agent_orchestration/servers/: resource_server.py
src/agent_orchestration/shared/: audit.py  models.py
src/agent_orchestration/wallets/: wallets.py
tests/: test_ap2_signature.py  test_orchestrator_success.py  test_policy_rejection.py  test_retry_degraded.py
